Bug 879529 - Fix thread priorities in B2G child processes. r=gsvelto, a=leo+

Previously, suppose we were changing a process's priority from 18 to 1.
If a task had priority 19, that should have changed to 2.  But instead
we changed it to 18!  That's totally wrong.